--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,7 +32,7 @@
     
       gtag('config', 'G-8R9745HN9X');
     </script>
-    <title>React App</title>
+    <title>Dice Roll Game</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
